--- a/.github/workflows/homework.yml
+++ b/.github/workflows/homework.yml
@@ -6,7 +6,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+        with:
+          fetch-depth: 2
+      
       # Checkout the repository
       - name: Checkout the repository
         uses: actions/checkout@v2
@@ -28,4 +30,5 @@ jobs:
         continue-on-error: true
       - name: Natijalar
         run: |
-          python test/sendtest.py ${{github.actor}} '${{github.repository}}'
+          CHANGED_FILES=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }}) 
+          python test/sendtest.py ${{github.actor}} '${{github.repository}}' "$CHANGED_FILES"
